[gd_scene load_steps=6 format=3 uid="uid://bms1p223snqns"]

[ext_resource type="Script" path="res://Shop/item.gd" id="1_f3q3m"]
[ext_resource type="Texture2D" uid="uid://rv7gi55qe7ld" path="res://images/rocket-1-off.png" id="1_sm57q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w63mj"]
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6n2ye"]
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lg4dq"]
bg_color = Color(0.035111, 0.520757, 0.0285278, 1)
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="Item" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f3q3m")

[node name="Panel" type="Panel" parent="."]
texture_filter = 1
layout_mode = 0
offset_right = 120.0
offset_bottom = 150.0
theme_override_styles/panel = SubResource("StyleBoxFlat_w63mj")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ItemImg" type="TextureRect" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("1_sm57q")
expand_mode = 1
stretch_mode = 5

[node name="ItemName" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemCost" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Cost"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_6n2ye")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lg4dq")
text = "Purchase"

[connection signal="pressed" from="Panel/VBoxContainer/Button" to="." method="_on_button_pressed"]
